[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/HealthBar/hud-hp-bar.png" type="Texture" id=1]
[ext_resource path="res://HUD/HealthBar/HPBarRect.gd" type="Script" id=2]

[node name="HPBarRect" type="TextureProgress"]
margin_left = 46.0
margin_top = 15.0
margin_right = 110.0
margin_bottom = 19.0
texture_progress = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="value_changed" from="." to="." method="_on_HPBarRect_value_changed"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
